# web-exp-criativa

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  compose.yml  criando_banco.txt  diesel.toml  entrypoint.sh  main.php
docs/: comandos_para_funfar_db.txt  criando_banco.txt  git.md  guia_criptografia.md  instalacao_postgres.md
js/: card_page.js  newpasswd.js  register.js  verifica_mfa.js
migrations/2025-04-24-161114_criar_usuarios/: up.sql
migrations/2025-05-01-001359_criar_usuarios/: up.sql
migrations/2025-05-02-171447_criar_usuarios/: up.sql
migrations/2025-05-02-172926_criar_usuarios/: up.sql
migrations/2025-05-02-224924_criar_usuarios/: up.sql
src/: account.rs  altera_senha_esqueci_email.rs  autenticador.rs  cadastro.rs  card_pg.rs  cartao.rs  chave.rs  conf_botao_email.rs  cpf.rs  cria_cartao.rs  criacao_conta.rs  database.php  esqueci_senha_arquivo.rs  login.rs  login_db.rs  mail.rs  main.rs  models.rs  newcodmfa.rs  newpasswd.rs  princiapl.rs  processa-registro.php  register.php  schema.rs  sessao.rs
static/: account_page.html  account_style.css  cadastro.css  cadastro.js  card_page.html  code_page.html  coloca_codigo.html  comentarios.html  conf_email.html  conta.html  dashboard.html  dashboard_style.css  emprestimo_page.html  forgot_page.html  forgot_style.css  index.css  index.html  login.js  login_page.html  login_style.css  newconta.html  newpasswd_page.html  old.js  paleta.txt  register.js  register_page.html  register_style.css  sobre.html  token.html  verifica_mfa.js
static/css/: card_style.css  (+7 more)
(+34 files in other folders)
