[package]
name = "web-exp-criativa"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
lettre = "0.11.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
dotenv = "0.15"
koibumi-base32 = "0.0.3"
totp-lite = "2.0.1"
diesel = { version = "2.2.9" , features = ["postgres"] }
bcrypt = "0.17.0"

