[package]
name = "web-exp-criativa"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
lettre = "0.11.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
dotenv = "0.15"
koibumi-base32 = "0.0.3"
totp-lite = "2.0.1"
diesel = { version = "2.2.9" , features = ["postgres"] }
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.10.2"
time = "0.3"
once_cell = "1.21.3"
cookie = "0.18.1"
base64 = "0.21"
aes = "0.8"
hex = "0.4"
rsa = "0.9.8"
sha2 = "0.10.9"
openssl = "0.10"

